style with node-sass, move styles to their own dir, move components

--- a/src/styles/sass/BookListPane.scss
+++ b/src/styles/sass/BookListPane.scss
@@ -1,9 +1,9 @@
 .app-book-list-pane {
-  display: inline-block;
+  display: flex;
   width: 420px;
   height: 500px;
   margin: 30px 40px;
-  background-color: #52b7e2;
+  background-color: pink;
   border: 1px solid grey;
 }
 
