revert list pane styles, convert Logo to stateless functional component

--- a/src/styles/sass/BookListPane.scss
+++ b/src/styles/sass/BookListPane.scss
@@ -1,9 +1,9 @@
 .app-book-list-pane {
-  display: flex;
+  display: inline-block;
   width: 420px;
   height: 500px;
   margin: 30px 40px;
-  background-color: pink;
+  background-color: #7eb3f2;
   border: 1px solid grey;
 }
 
