break book lists out into their own components, display number of books in each list

--- a/src/styles/sass/ListPicker.scss
+++ b/src/styles/sass/ListPicker.scss
@@ -5,4 +5,11 @@
   margin: 100px 100px 0 50px;
   background-color: #b8b8b8;
   border: 1px solid grey;
+  
+  .book-lists {
+    li {
+      list-style-type: none;
+      cursor: pointer;
+    }
+  }
 }
