--- a/src/styles/sass/ListPicker.scss
+++ b/src/styles/sass/ListPicker.scss
@@ -10,6 +10,9 @@
     li {
       list-style-type: none;
       cursor: pointer;
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 }
