--- a/src/styles/sass/BookListPane.scss
+++ b/src/styles/sass/BookListPane.scss
@@ -3,8 +3,10 @@
   width: 420px;
   height: 500px;
   margin: 30px 40px;
-  background-color: #7eb3f2;
-  border: 1px solid grey;
+  background-color: #fff;
+  color: #4d4d4d;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
+              0 25px 50px 0 rgba(0, 0, 0, 0.1);
 }
 
 .book {
