--- a/src/styles/sass/SearchBar.scss
+++ b/src/styles/sass/SearchBar.scss
@@ -1,8 +1,8 @@
-.app-search {
+.book-search {
   margin: 0 auto;
   width: 300px;
   
-  .app-search-input {
+  .book-search-input {
     width: 300px;
     height: 18px;
   }
