add stock cover image when no image is returned from search, make logo a link to app, minor styling

--- a/src/styles/sass/Logo.scss
+++ b/src/styles/sass/Logo.scss
@@ -1,5 +1,8 @@
 .app-logo {
   width: 200px;
   height: 40px;
-  background-color: #f0dcb1;
+  a {
+    color: #4d4d4d;
+    text-decoration: none;
+  }
 }
