basic styling for search results page

--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -1,5 +1,7 @@
 @import 'App';
 @import 'BookListPane';
+@import 'Book';
 @import 'ListPicker';
 @import 'Logo';
 @import 'SearchBar';
+@import 'Search';
