--- a/src/styles/sass/BookListPane.scss
+++ b/src/styles/sass/BookListPane.scss
@@ -1,7 +1,7 @@
 .app-book-list-pane {
   display: inline-block;
   width: 520px;
-  height: 500px;
+  height: auto;
   margin: 30px 40px;
   background-color: #fff;
   color: #4d4d4d;
