--- a/src/styles/sass/BookListPane.scss
+++ b/src/styles/sass/BookListPane.scss
@@ -7,5 +7,10 @@
   color: #4d4d4d;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
               0 25px 50px 0 rgba(0, 0, 0, 0.1);
-              
+  
+  .app-book-list {
+    .add-book-btn {
+      display: none;
+    }
+  }
 }
