Add check for empty books obj in list

--- a/src/styles/sass/Book.scss
+++ b/src/styles/sass/Book.scss
@@ -3,7 +3,8 @@
   padding: 12px 0;
   border-top: 1px solid rgba(128, 128, 128, 0.34);
   
-  &.no-results {
+  &.no-results,
+  &.empty-list {
     border: none;
   }
   
