create bookIDs state array for storing all of user's books, create method to add ID to state array when adding a book to list

--- a/src/styles/sass/BookListPane.scss
+++ b/src/styles/sass/BookListPane.scss
@@ -9,7 +9,7 @@
               0 25px 50px 0 rgba(0, 0, 0, 0.1);
   
   .app-book-list {
-    .add-book-btn {
+    .on-search {
       display: none;
     }
   }
