add book view elements and basic styling

--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -1,6 +1,7 @@
 @import 'App';
 @import 'BookListPane';
 @import 'Book';
+@import 'BookView';
 @import 'ListPicker';
 @import 'Logo';
 @import 'SearchBar';
