--- a/src/styles/sass/BookView.scss
+++ b/src/styles/sass/BookView.scss
@@ -1,6 +1,27 @@
 .book-view-wrapper {
   margin: 20px;
+  
   .book-view-cover {
     width: 200px;
+  }
+  
+  .add-book-btn-wrapper {
+    background-color: #00AE68;
+    width: 130px;
+    height: 40px;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+    
+    .add-book-btn {
+      display: inline-block;
+      vertical-align: top;
+      padding: 12px 16px 10px;
+      border-right: 1px solid #1f7932;
+    }
+    
+    .btn-icon {
+      padding: 8px 0 0 6px;
+    }
   }
 }
