styling for side menu containing list names

--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -1,8 +1,9 @@
 @import 'App';
-@import 'BookListPane';
 @import 'Book';
 @import 'BookView';
+@import 'BookListPane';
 @import 'ListPicker';
 @import 'Logo';
 @import 'SearchBar';
 @import 'Search';
+@import 'list-menus';
