slide in side menu when clicking plus icon

--- a/src/styles/sass/list-menus.scss
+++ b/src/styles/sass/list-menus.scss
@@ -7,7 +7,7 @@
   background-color: #eaeaea;
   overflow: hidden;
   transition: transform 0.3s ease-in-out;
-  &.slide-in {
+  &.show-list {
     transform: translateX(-300px);
   }
   
