--- a/src/styles/sass/list-menus.scss
+++ b/src/styles/sass/list-menus.scss
@@ -15,9 +15,15 @@
     margin: 0;
     padding: 0;
     list-style-type: none;
+    li.list-title {
+      padding: 18px 20px;
+      font-size: 18px;
+      background-color: #a9a8a8;
+    }
     li.list-name {
       border-bottom: 1px solid #d4d4d4;
       padding: 13px 20px;
+      cursor: pointer;
     }
   }
 }
