--- a/src/styles/sass/BookView.scss
+++ b/src/styles/sass/BookView.scss
@@ -6,8 +6,8 @@
   }
   
   .add-book-btn-wrapper {
+    display: inline-block;
     background-color: #00AE68;
-    width: 130px;
     height: 40px;
     color: white;
     border-radius: 4px;
