--- a/src/styles/sass/list-menus.scss
+++ b/src/styles/sass/list-menus.scss
@@ -7,6 +7,7 @@
   background-color: #eaeaea;
   overflow: hidden;
   transition: transform 0.3s ease-in-out;
+  z-index: 20;
   &.show-list {
     transform: translateX(-300px);
   }
