--- a/src/styles/sass/BookListPane.scss
+++ b/src/styles/sass/BookListPane.scss
@@ -9,6 +9,7 @@
               0 25px 50px 0 rgba(0, 0, 0, 0.1);
   
   .app-book-list {
+    list-style-type: none;
     .on-search {
       display: none;
     }
