--- a/src/styles/sass/BookView.scss
+++ b/src/styles/sass/BookView.scss
@@ -5,29 +5,7 @@
     width: 200px;
   }
   
-  .add-book-btn-wrapper {
-    display: inline-block;
-    background-color: #00AE68;
-    height: 40px;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-    
-    .add-book-btn {
-      display: inline-block;
-      vertical-align: top;
-      padding: 12px 16px 10px;
-      border-right: 1px solid #1f7932;
-    }
-    
-    .btn-icon-wrapper {
-      display: inline-block;
-      width: 36px;
-      height: 39px;
-      
-      .btn-icon {
-        padding: 8px 0 0 6px;
-      }
-    }
+  .btn-wrapper {
+    @include book-btn;
   }
 }
