--- a/src/styles/sass/Search.scss
+++ b/src/styles/sass/Search.scss
@@ -1,8 +1,18 @@
 .search-results {
   margin: 50px 0 0;
+  list-style-type: none;
+  
+  .book {
+    .btn-icon {
+    }
+  }
+  
+  .btn-wrapper {
+    @include book-btn;
+  }
   
   //TODO: hide this only on mobile
-  .add-book-btn {
-    display: none;
-  }
+  // .add-book-btn {
+  //   display: none;
+  // }
 }
