--- a/src/styles/sass/Search.scss
+++ b/src/styles/sass/Search.scss
@@ -1,18 +1,57 @@
-.search-results {
-  margin: 50px 0 0;
-  list-style-type: none;
+.search-wrapper {
+  .search-results {
+    margin: 50px 0 0;
+    list-style-type: none;
+    
+    .btn-wrapper {
+      @include book-btn;
+    }
+    
+    //TODO: hide this only on mobile
+    // .add-book-btn {
+    //   display: none;
+    // }
+  }
   
-  .book {
-    .btn-icon {
+  .fetch-spinner {
+    margin: 100px auto 0;
+    width: 70px;
+    text-align: center;
+  }
+
+  .fetch-spinner > div {
+    width: 18px;
+    height: 18px;
+    background-color: #4d4d4d;
+
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  }
+
+  .fetch-spinner .bounce1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+  }
+
+  .fetch-spinner .bounce2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+  }
+
+  @-webkit-keyframes sk-bouncedelay {
+    0%, 80%, 100% { -webkit-transform: scale(0) }
+    40% { -webkit-transform: scale(1.0) }
+  }
+
+  @keyframes sk-bouncedelay {
+    0%, 80%, 100% { 
+      -webkit-transform: scale(0);
+      transform: scale(0);
+    } 40% { 
+      -webkit-transform: scale(1.0);
+      transform: scale(1.0);
     }
   }
-  
-  .btn-wrapper {
-    @include book-btn;
-  }
-  
-  //TODO: hide this only on mobile
-  // .add-book-btn {
-  //   display: none;
-  // }
 }
