styling for main list page

--- a/src/styles/sass/Book.scss
+++ b/src/styles/sass/Book.scss
@@ -7,6 +7,11 @@
     border: none;
   }
   
+  .book-thumbnail-img {
+    margin: 0 0 0 15px;
+    box-shadow: 3px 3px 10px #888;
+  }
+  
   .book-title-author {
     display: inline-block;
     margin: 0 20px;
