--- a/src/styles/sass/Logo.scss
+++ b/src/styles/sass/Logo.scss
@@ -1,8 +1,9 @@
 .app-logo {
   width: 200px;
   height: 40px;
+  margin: 30px auto;
   a {
-    color: #4d4d4d;
+    color: #3a3a3a;
     text-decoration: none;
   }
 }
