--- a/src/styles/sass/BookListPane.scss
+++ b/src/styles/sass/BookListPane.scss
@@ -1,14 +1,21 @@
 .app-book-list-pane {
-  display: inline-block;
-  width: 520px;
+  width: 95%;
   height: auto;
-  margin: 30px 40px;
+  margin: 30px auto;
   background-color: #fff;
-  color: #4d4d4d;
+  color: #3a3a3a;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
               0 25px 50px 0 rgba(0, 0, 0, 0.1);
+              
+  .list-title {
+    margin: 0;
+    padding: 20px 25px 15px;
+    background-color: #b6c0ca;
+  }
   
   .app-book-list {
+    margin: 0;
+    padding: 0;
     list-style-type: none;
     .on-search {
       display: none;
