--- a/src/styles/sass/ListPicker.scss
+++ b/src/styles/sass/ListPicker.scss
@@ -1,18 +1,3 @@
 .app-list-picker {
-  display: inline-block;
-  width: 200px;
-  height: 260px;
-  margin: 20px 100px 0 50px;
-  background-color: #b8b8b8;
-  border: 1px solid grey;
-  
-  .book-lists {
-    li {
-      list-style-type: none;
-      cursor: pointer;
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-  }
+  @include side-list;
 }
