--- a/src/styles/sass/_mixins.scss
+++ b/src/styles/sass/_mixins.scss
@@ -26,3 +26,37 @@
     }
   }
 }
+
+/*----------
+  SIDELIST
+----------*/
+@mixin side-list {
+  position: fixed;
+  top: 0;
+  right: -300px;
+  height: 100vh;
+  width: 300px;
+  background-color: #eaeaea;
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out;
+  z-index: 20;
+  &.show-list {
+    transform: translateX(-300px);
+  }
+  
+  ul.list-names {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    li.list-title {
+      padding: 18px 20px;
+      font-size: 18px;
+      background-color: #a9a8a8;
+    }
+    li.list-name {
+      border-bottom: 1px solid #d4d4d4;
+      padding: 13px 20px;
+      cursor: pointer;
+    }
+  }
+}
