add Plus and Modal in Main

--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -1,5 +1,6 @@
 @import 'mixins';
 @import 'App';
+@import 'Main';
 @import 'Book';
 @import 'BookView';
 @import 'BookListPane';
@@ -9,4 +10,5 @@
 @import 'Search';
 @import 'Overlay';
 @import 'SwitchListBtn';
+@import 'Modal';
 @import 'list-menus';
