--- a/src/styles/sass/SwitchListBtn.scss
+++ b/src/styles/sass/SwitchListBtn.scss
@@ -1,12 +1,14 @@
 
 .switch-list-btn {
   display: inline-block;
+  margin: 30px 15px 0;
   background-color: #cdcdcd;
   color: 3a3a3a;
   border-radius: 4px;
   cursor: pointer;
   
   .btn-wrapper {
+    font-size: 15px;
     display: flex;
     align-items: center;
     height: 33px;
@@ -19,12 +21,12 @@
       border-right: 1px solid #9e9e9e;
       
       .btn-icon {
-        padding: 8px 0 0 6px;
+        padding: 5px 0 0 6px;
       }
     }
     
     .switch-list-btn-title {
-      padding: 0 6px;
+      padding: 0 6px 0 11px;
     }
   }
 }
