--- a/src/styles/sass/_mixins.scss
+++ b/src/styles/sass/_mixins.scss
@@ -39,6 +39,7 @@
   background-color: #eaeaea;
   overflow: hidden;
   transition: transform 0.3s ease-in-out;
+  cursor: default;
   z-index: 20;
   &.show-list {
     transform: translateX(-300px);
