--- a/src/styles/sass/Modal.scss
+++ b/src/styles/sass/Modal.scss
@@ -1,12 +1,12 @@
 .modal {
-  // display: none;
+  display: none;
   // opacity: 0;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 500px;
-  height: 350px;
+  width: 300px;
+  height: 200px;
   background-color: #ebe9e9;
   z-index: 20;
   box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.5);
@@ -21,7 +21,7 @@
   //   height: 550px;
   // }
   
-  &.sbs-show {
+  &.show-modal {
     display: block;
   }
 }
