--- a/src/styles/sass/SwitchListBtn.scss
+++ b/src/styles/sass/SwitchListBtn.scss
@@ -1,7 +1,7 @@
 
 .switch-list-btn {
   display: inline-block;
-  margin: 30px 15px 0;
+  margin: 30px 0 0;
   background-color: #cdcdcd;
   color: 3a3a3a;
   border-radius: 4px;
