--- a/src/styles/sass/Modal.scss
+++ b/src/styles/sass/Modal.scss
@@ -5,8 +5,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 300px;
-  height: 200px;
+  width: 260px;
+  height: 170px;
   background-color: #ebe9e9;
   z-index: 20;
   box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.5);
@@ -23,5 +23,33 @@
   
   &.show-modal {
     display: block;
+  }
+  
+  .modal-input-wrapper {
+    padding: 25px 0px 0 28px;
+    h1 {
+      margin-bottom: 13px;
+      font-size: 20px;
+    }
+    
+    input {
+      width: 62%;
+      padding: 5px;
+      border-style: none;
+      border-radius: 2px;
+      border: 1px solid #dadada;
+    }
+    
+    button {
+      display: block;
+      margin: 30px 25px 0 auto;  
+      border: none;
+      font-style: unset;
+      background-color: inherit;
+      text-transform: uppercase;
+      font-weight: bold;
+      color: inherit;
+      cursor: pointer;
+    }
   }
 }
