--- a/src/styles/sass/Modal.scss
+++ b/src/styles/sass/Modal.scss
@@ -44,11 +44,11 @@
       display: block;
       margin: 30px 25px 0 auto;  
       border: none;
+      color: #039be5;
       font-style: unset;
       background-color: inherit;
       text-transform: uppercase;
       font-weight: bold;
-      color: inherit;
       cursor: pointer;
     }
   }
