--- a/src/styles/sass/SwitchListBtn.scss
+++ b/src/styles/sass/SwitchListBtn.scss
@@ -2,7 +2,7 @@
 .switch-list-btn {
   display: inline-block;
   margin: 30px 0 0;
-  background-color: #cdcdcd;
+  background-color: #dcdcdc;
   border-radius: 4px;
   cursor: pointer;
   
