--- a/src/styles/sass/BookView.scss
+++ b/src/styles/sass/BookView.scss
@@ -8,4 +8,15 @@
   .btn-wrapper {
     @include book-btn;
   }
+  
+  .remove-btn {
+    padding: 12px 16px 10px;
+    border-radius: 4px;
+    margin: 10px 0;
+    font-size: 16px;
+    color: #fff;
+    border: none;
+    background-color: #7393a4;
+    cursor: pointer;
+  }
 }
