--- a/src/styles/sass/Main.scss
+++ b/src/styles/sass/Main.scss
@@ -10,10 +10,12 @@
     
     > .icon-wrapper {
       width: auto;
+      height: 21px;
       margin: 2px 5px;
       padding: 4px 9px 7px;
       background-color: #dcdcdc;
-      border-radius: 13px;
+      border: 1px solid #d4d4d4;
+      border-radius: 20px;
       cursor: pointer;
     }
     
@@ -22,5 +24,14 @@
   .btn-icon {
     fill: #3a3a3a;
     margin-bottom: -7px;
+    &.icon-plus,
+    &.icon-remove {
+      margin-left: 4px;
+      margin-right: -4px;
+      fill: #fff;
+      background-color: #9e9e9e;
+      border-radius: 13px;
+    }
   }
+  
 }
