--- a/src/styles/sass/Main.scss
+++ b/src/styles/sass/Main.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
   
   .main-icon-wrapper {
-    // margin: 0 0 0 auto;
+    justify-content: flex-end;
     font-size: 13px;
     display: flex;
     align-items: center;
