minor search button tweak

--- a/src/styles/sass/SearchBar.scss
+++ b/src/styles/sass/SearchBar.scss
@@ -24,6 +24,7 @@
   
   button {
     width: 60px;
+    padding: 5px 3px 3px;
     border: none;
     border-radius: 0 2px 2px 0;
     background-color: #c8ccd0;
