--- a/src/styles/sass/_mixins.scss
+++ b/src/styles/sass/_mixins.scss
@@ -1,7 +1,7 @@
 /*----------
   BUTTONS
 ----------*/
-@mixin book-btn {
+@mixin book-btn($btn-color, $font-color) {
   display: inline-block;
   background-color: #00AE68;
   height: 40px;
@@ -13,13 +13,17 @@
     display: inline-block;
     vertical-align: top;
     padding: 12px 16px 10px;
-    border-right: 1px solid #1f7932;
+    background-color: $btn-color;
+    border-radius: 4px 0 0 4px;
+    color: $font-color;
   }
   
   .btn-icon-wrapper {
     display: inline-block;
     width: 36px;
-    height: 39px;
+    height: 40px;
+    border-left: 1px solid #0a6a44;
+    border-radius: 0 4px 4px 0;
     
     .btn-icon {
       padding: 8px 0 0 6px;
