--- a/src/styles/sass/SearchBar.scss
+++ b/src/styles/sass/SearchBar.scss
@@ -1,40 +1,61 @@
-.book-search {
-  display: flex;
-  margin: 20px auto 25px;
+.book-search-wrapper {
   width: 300px;
-  
-  .book-search-input {
-    width: 350px;
-    height: 18px;
-    padding: 8px 16px;
-    border-radius: 2px 0 0 2px;
-    border: 1px solid #c8ccd0;
-    font-size: 13px;
-    color: #6a737c;
-    transition: border-color 0.5s ease;
-    box-shadow: inset 0 0 1px rgba(145,153,161,0.2), 0 0 0 rgba(255,255,255,0);
-    &:hover {
-      border-color: rgba(0,149,255,0.5);
-      box-shadow: inset 0 0 2px #d3d6da, 0 0 2px rgba(0,149,255,0.2);
+  margin: 20px auto 25px;
+
+  .book-search {
+    display: flex;
+    
+    .book-search-input {
+      width: 350px;
+      height: 18px;
+      padding: 8px 16px;
+      border-radius: 2px 0 0 2px;
+      border: 1px solid #c8ccd0;
+      font-size: 13px;
+      color: #6a737c;
+      transition: border-color 0.5s ease;
+      box-shadow: inset 0 0 1px rgba(145,153,161,0.2), 0 0 0 rgba(255,255,255,0);
+      &:hover {
+        border-color: rgba(0,149,255,0.5);
+        box-shadow: inset 0 0 2px #d3d6da, 0 0 2px rgba(0,149,255,0.2);
+      }
+      &:focus {
+        outline: none;
+      }
     }
-    &:focus {
-      outline: none;
+    
+    button {
+      width: 60px;
+      padding: 5px 3px 3px;
+      border: none;
+      border-radius: 0 2px 2px 0;
+      background-color: #c8ccd0;
+      cursor: pointer;
+      transition: background-color 0.25s ease;
+      &:hover {
+        background-color: #b2b5ba;
+      }
+      &:focus {
+        outline: none;
+      }
+    }
+    
+  }
+  
+  .search-suggs-wrapper {
+    margin-top: 0;
+    border: 1px solid #babcbd;
+    
+    .search-suggs {
+      list-style-type: none;
+      margin: 8px 0;
+      padding: 0 16px;
+      font-size: 14px;
+      
+      li {
+        padding: 2px 0;
+      }
     }
   }
   
-  button {
-    width: 60px;
-    padding: 5px 3px 3px;
-    border: none;
-    border-radius: 0 2px 2px 0;
-    background-color: #c8ccd0;
-    cursor: pointer;
-    transition: background-color 0.25s ease;
-    &:hover {
-      background-color: #b2b5ba;
-    }
-    &:focus {
-      outline: none;
-    }
-  }
 }
