--- a/src/styles/sass/SearchBar.scss
+++ b/src/styles/sass/SearchBar.scss
@@ -1,7 +1,7 @@
 .book-search-wrapper {
   width: 300px;
   margin: 20px auto 25px;
-
+  
   .book-search {
     display: flex;
     
@@ -35,9 +35,7 @@
       &:hover {
         background-color: #b2b5ba;
       }
-      &:focus {
-        outline: none;
-      }
+      
     }
     
   }
@@ -48,19 +46,25 @@
     width: 298px;
     margin-top: 0;
     border: 1px solid #babcbd;
-    overflow-x: scroll;
+    overflow-x: hidden;
     background-color: #fff;
     z-index: 30;
     box-shadow: 0 2px 4px rgba(0,0,0,0.2);
     
     .search-suggs {
       list-style-type: none;
-      margin: 8px 0;
-      padding: 0 16px;
+      margin: 0;
+      padding: 0;
       font-size: 14px;
+      cursor: pointer;
       
-      li {
-        padding: 2px 0;
+      .sugg-item {
+        padding: 2px 16px;
+        &:hover,
+        &.selected {
+          color: #fff;
+          background-color: #4d90fe;
+        }
       }
     }
   }
