show/hide header with CSSTransitionGroup which fixes search keydown event conflict

--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -1,6 +1,7 @@
 @import 'mixins';
 @import 'App';
 @import 'Main';
+@import 'Header';
 @import 'Book';
 @import 'BookView';
 @import 'BookListPane';
