--- a/src/styles/sass/_mixins.scss
+++ b/src/styles/sass/_mixins.scss
@@ -34,7 +34,7 @@
 /*----------
   SIDELIST
 ----------*/
-@mixin side-list {
+@mixin side-list-mobile {
   position: fixed;
   top: 0;
   right: -300px;
