--- a/src/styles/sass/Main.scss
+++ b/src/styles/sass/Main.scss
@@ -8,6 +8,10 @@
     display: flex;
     align-items: center;
     
+    @media(min-width: 800px) {
+      display: none;
+    }
+    
     > .icon-wrapper {
       width: auto;
       height: 21px;
