--- a/src/styles/sass/ListPicker.scss
+++ b/src/styles/sass/ListPicker.scss
@@ -8,7 +8,7 @@
   display: flex;
   > .app-list-picker-wrapper {
     display: none;
-    width: 250px;
+    width: 270px;
     
     @media(min-width: 800px) {
       display: block;
@@ -17,14 +17,31 @@
     > .app-list-picker {
       
       .book-lists {
+        margin: 40px 0 0 20px;
+        padding: 0;
         list-style-type: none;
-        margin: 10px;
-        padding: 10px;
         border: 1px solid #c8ccd0;
         border-radius: 7px;
         cursor: pointer;
         .list-title {
-          margin: 5px 0;
+          background-color: #b5c0c9;
+          margin: 0 auto;
+          padding: 11px;
+          border-radius: 6px 6px 0 0;
+          font-weight: bold;
+          font-size: 18px;
+        }
+        
+        .list-name {
+          padding: 8px 7px;
+          border-bottom: 1px solid #dddada;
+          &:hover {
+            background-color: #f1f6fa;
+          }
+          &:last-child {
+            border: none;
+            border-radius: 0 0 6px 6px;
+          }
         }
       }
     }
