--- a/src/styles/sass/BookListPane.scss
+++ b/src/styles/sass/BookListPane.scss
@@ -1,11 +1,16 @@
 .app-book-list-pane {
-  flex-grow: 1;
-  max-width: 780px;
+  flex-grow: 3;
+  max-width: 785px;
   height: auto;
   margin: 10px auto;
   background-color: #fff;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
               0 25px 50px 0 rgba(0, 0, 0, 0.1);
+              
+  @media(min-width: 800px) {
+    margin: 10px 0 0 25px;
+
+  }
               
   .list-title {
     margin: 0;
