ListPicker fixes position on scroll

--- a/src/styles/sass/BookListPane.scss
+++ b/src/styles/sass/BookListPane.scss
@@ -9,6 +9,10 @@
               
   @media(min-width: 800px) {
     margin: 10px 0 0 25px;
+    
+    &.list-picker-fixed {
+      margin-left: 295px; 
+    }
 
   }
               
