--- a/src/styles/sass/BookMenu.scss
+++ b/src/styles/sass/BookMenu.scss
@@ -81,22 +81,28 @@
       }
 
       ul.book-menu-move-list {
+        display: none;
         position: absolute;
         top: 52px;
-        left: -143px;
-        opacity: 0;
+        left: -192px;
+        width: 190px;
         border: 1px solid #c8ccd0;
         border-radius: 2px;
         transition: all 300ms;
         box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 
                     0 25px 50px 0 rgba(0, 0, 0, 0.1);
         &.show-move-list {
-          opacity: 1;
+          display: block;
         }
         
         .move-list-header {
           background-color: #eaeaea;
           border: none;
+
+          .btn-icon {
+            display: block;
+            margin: 0 0 0 auto;
+          }
         }
       }
 
