--- a/src/styles/sass/ListPicker.scss
+++ b/src/styles/sass/ListPicker.scss
@@ -79,34 +79,70 @@
       width: 30px;
       height: 30px;
       margin: 10px;
-    
-      .icon-plus {
-        margin: 0;
-        background-color: rgba(181, 192, 201, 0.68);
-        border-radius: 25px;
-        cursor: pointer;
-        transition: transform 300ms;
-        z-index: 5;
-        &:hover {
-          transform: rotate(90deg);
-          + span {
-            opacity: 1;
-            transform: translateX(15px);
+
+      form {
+
+        button {
+          padding: 0;
+          background-color: none;
+          border: none;
+          background-color: #f5f5f5;
+          &:focus {
+            outline: 0;
+          }
+          &:hover {
+            + input {
+              opacity: 1;
+              transform: translateY(7px);
+            }
+          }
+          &.active {
+            &:hover {
+              + input {
+                transform: translateY(0px);
+              }
+            }
+          }
+
+          .icon-plus {
+            margin: 0;
+            background-color: rgba(181, 192, 201, 0.68);
+            border-radius: 25px;
+            cursor: pointer;
+            transition: transform 300ms;
+            z-index: 5;
           }
         }
-      }
-      
-      span {
-        position: absolute;
-        display: inline-block;
-        top: 6px;
-        left: 25px;
-        width: 100px;
-        font-size: 15px;
-        opacity: 0;
-        pointer-events: none;
-        transition: all 300ms ease-in-out;
-        cursor: default;
+
+        input {
+          position: absolute;
+          display: inline-block;
+          left: 40px;
+          top: -5px;
+          width: 120px;
+          padding: 5px;
+          border: none;
+          background-color: whitesmoke;
+          font-size: 15px;
+          opacity: 0;
+          pointer-events: none;
+          transition: all 200ms ease-in-out;
+          cursor: default;
+          &::placeholder {
+            color: #A1A1A1;
+          }
+          &:focus {
+            outline: 0;
+          }
+          &.active {
+            opacity: 1;
+            top: 2px;
+            border-style: none;
+            border-bottom: 1px solid #676767;
+            pointer-events: initial;
+          }
+        }
+
       }
       
     }
