basic styling for desktop search

--- a/src/styles/sass/Search.scss
+++ b/src/styles/sass/Search.scss
@@ -1,8 +1,61 @@
 .search-wrapper {
+  max-width: 1000px;
+  @media(min-width: 800px) {    
+    margin: 20px auto;
+  }
   .search-results {
     padding: 0;
     margin: 50px 0 0;
     list-style-type: none;
+
+    @media(min-width: 800px) {          
+      li {
+        display: flex;
+        justify-content: space-between;      
+        border-top: 1px solid rgba(128, 128, 128, 0.34);
+        
+        .book {
+          border: none;
+        }
+
+        .book-view-btns {
+          padding: 45px 30px 0 0;
+          position: relative;
+          
+          .add-list-select {
+            display: none;
+            position: absolute;
+            top: 85px;
+            right: -270px;
+            width: 210px;
+            height: auto;
+            border: 1px solid rgba(128, 128, 128, 0.34);            
+            overflow: scroll;
+            box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+            z-index: 10;
+            &.show-list {
+              display: block;
+            }
+
+            ul.list-names {
+              li.list-title {
+                padding: 7px 20px;
+                font-weight: bold;
+              }
+              li.list-name {
+                &:hover {
+                  background-color: #F7F7F7;
+                }
+              }
+            }
+          }
+          
+          .overlay {
+            display: none;
+          }
+        }
+      }
+    }
     
     .btn-wrapper-add {
       @include book-btn(#00AE68, #fff);
