--- a/src/styles/sass/Search.scss
+++ b/src/styles/sass/Search.scss
@@ -49,7 +49,7 @@
   }
   
   .fetch-spinner {
-    margin: 100px auto 0;
+    margin: 100px auto 900px;
     width: 70px;
     text-align: center;
   }
