--- a/src/styles/sass/Search.scss
+++ b/src/styles/sass/Search.scss
@@ -3,9 +3,21 @@
   @media(min-width: 800px) {    
     margin: 20px auto;
   }
+
+  .book-view-back-link {
+    margin: 40px 0 0px 20px;
+    font-size: 15px;
+    a {
+      text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+
   .search-results {
     padding: 0;
-    margin: 50px 0 0;
+    margin: 30px 0 0;
     list-style-type: none;
 
     @media(min-width: 800px) {          
