--- a/src/styles/sass/Logo.scss
+++ b/src/styles/sass/Logo.scss
@@ -2,6 +2,7 @@
   width: 200px;
   height: 40px;
   margin: 30px auto;
+  font-family: 'Alegreya', serif;
   
   a {
     color: #3a3a3a;
@@ -16,7 +17,7 @@
       height: 54px;
       margin: 40px auto 90px;
       h1 {
-        font-size: 56px;
+        font-size: 65px;
       }
     }
   }
