--- a/src/styles/sass/App.scss
+++ b/src/styles/sass/App.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: sans-serif;
+  font-family: 'Mukta', sans-serif;  
   background-color: #f5f5f5;
   color: #3a3a3a;
   margin: 0;
