--- a/src/styles/sass/BookView.scss
+++ b/src/styles/sass/BookView.scss
@@ -29,22 +29,23 @@
           font-size: 18px;
         }
 
-        .book-view-btns-wrapper {
-          display: flex;
-          margin: 50px 20px 0 50px;
-          
-          @include side-list-desktop;
+      }
+    }
 
-          .add-list-select {
-            top: 40px;
-            right: -300px;
-          }
+    .book-view-btns-wrapper {
+      display: flex;
+      flex-direction: column-reverse;
+      
+      @include side-list-desktop;
 
-          .remove-btn {
-            margin: 0 20px;
-          }
-        }
+      .add-list-select {
+        right: 313px;
+        top: 40px;
+      }
 
+      .remove-btn {
+        width: 132px;
+        height: 39px;
       }
     }
 
@@ -52,6 +53,10 @@
       margin: 40px 0 30px;
       max-width: 700px;
     }
+  }
+
+  @media(min-width: 1500px) {
+    max-width: 930px;    
   }
   
   .book-view-back-link {
@@ -115,14 +120,14 @@
     font-size: 16px;
     color: #fff;
     border: none;
-    background-color: #7393a4;
+    background-color: rgba(255, 82, 82, 0.88);
     cursor: pointer;
 
     .icon-remove {
       margin: 0 8px -7px 0;
       background-color: whitesmoke;
       border-radius: 25px;
-      fill: #7393a4;
+      fill: rgba(255, 82, 82, 0.88);
     }
 
     span {
