more book view styling

--- a/src/styles/sass/Search.scss
+++ b/src/styles/sass/Search.scss
@@ -34,7 +34,8 @@
 
         .add-list-select {
           top: 85px;
-          right: -270px;
+          right: -266px;
+          // width: 184px;
         }
       }
     }
