--- a/src/styles/sass/BookView.scss
+++ b/src/styles/sass/BookView.scss
@@ -2,14 +2,14 @@
   margin: 20px;
 
   @media(min-width: 800px) {
+    position: relative;
     min-width: 720px;
     max-width: 825px;
-    margin: 60px auto;
-    padding: 0 20px;    
+    margin: 60px auto 450px;
+    padding: 0 20px;
 
     .book-view-body {
       display: flex;
-      height: 304px;
       margin-top: 30px;
 
       .book-view-cover {
@@ -35,11 +35,12 @@
     .book-view-btns-wrapper {
       display: flex;
       flex-direction: column-reverse;
-      
+      position: absolute;
+      top: 370px;
       @include side-list-desktop;
 
       .add-list-select {
-        right: 313px;
+        right: -296px;
         top: 40px;
       }
 
