--- a/src/styles/sass/Footer.scss
+++ b/src/styles/sass/Footer.scss
@@ -1,14 +1,26 @@
 .app-footer {
   margin: 120px 0 0 0;
   width: 100%;
-  height: 180px;
+  height: 140px;
   background-color: rgba(162, 181, 202, 0.4);
   
+  
   .footer-text {
-    width: 550px;
+    max-width: 468px;
     margin: 0 auto;
-    padding-top: 80px;
+    padding: 65px 26px 0;      
     font-size: 14px;
     font-weight: bold;
   }
+  
+  @media(min-width: 800px) {
+    height: 180px;
+    
+    .footer-text {
+      max-width: 535px;      
+      font-size: 16px;
+      padding-top: 80px;
+    }
+  }
+
 }
