--- a/src/styles/sass/_typography.scss
+++ b/src/styles/sass/_typography.scss
@@ -1,2 +1,2 @@
 @import url('https://fonts.googleapis.com/css?family=Alegreya');
-@import url('https://fonts.googleapis.com/css?family=Mukta');
+@import url('https://fonts.googleapis.com/css?family=Mukta:400,600');
