list picker styling

--- a/src/styles/sass/ListPicker.scss
+++ b/src/styles/sass/ListPicker.scss
@@ -70,6 +70,7 @@
           
           .list-picker-remove-icon {
             visibility: hidden;
+            margin-right: 6px;
           }
         }
       }
