book menu and footer styling

--- a/src/styles/sass/Search.scss
+++ b/src/styles/sass/Search.scss
@@ -28,6 +28,9 @@
         
         .book {
           border: none;
+          .book-title-author {
+            width: 645px;
+          }
         }
 
         @include side-list-desktop;
