--- a/src/styles/sass/BookMenu.scss
+++ b/src/styles/sass/BookMenu.scss
@@ -39,11 +39,14 @@
       
       li {
         height: 20px;
-        padding: 8px;
+        padding: 8px 8px 12px 12px;
         border-top: 1px solid #c8ccd0;
         cursor: pointer;        
         &:hover {
           background-color: #EFF1F3;
+        }
+        &:first-child {
+          border: none;
         }
       }
       
@@ -56,21 +59,18 @@
             display: flex;
             span {
               order: 1;
-              padding-top: 2px;
             }
             .icon-caret-right {
-              margin-top: -2px;
-              transform: rotate(180deg);              
+              margin: 0 10px 0 -3px;             
+              transform: rotate(180deg);         
             }
 
             @media(min-width: 1500px) {
               justify-content: space-between;
               span {
                 order: 0;
-                padding-top: 2px;
               }
               .icon-caret-right {
-                margin-top: -2px;
                 transform: rotate(0deg);              
               }              
             }
@@ -79,6 +79,8 @@
           &.book-menu-remove {
             border-radius: 0 0 5px 5px;            
             .icon-remove {
+              position: relative;
+              top: -2px;
               width: 16px;
               height: 16px;
               fill: #9e9e9e;
@@ -108,7 +110,7 @@
           display: block;
         }
         &.on-want-to-read {
-          top: 52px;
+          top: 55px;
         }
 
         @media(min-width: 1500px) {
