--- a/src/styles/sass/Footer.scss
+++ b/src/styles/sass/Footer.scss
@@ -6,18 +6,18 @@
   
   
   .footer-text {
-    max-width: 468px;
+    max-width: 485px;
     margin: 0 auto;
     padding: 65px 26px 0;      
     font-size: 14px;
-    font-weight: bold;
+    font-weight: 600;
   }
   
   @media(min-width: 800px) {
     height: 180px;
     
     .footer-text {
-      max-width: 535px;      
+      max-width: 555px;      
       font-size: 16px;
       padding-top: 80px;
     }
