--- a/src/styles/sass/BookListPane.scss
+++ b/src/styles/sass/BookListPane.scss
@@ -19,7 +19,7 @@
   .list-title {
     margin: 0;
     padding: 20px 25px 15px;
-    background-color: #b6c0ca;
+    background-color: $grey-blue;
   }
   
   .app-book-list {
