--- a/src/styles/sass/Search.scss
+++ b/src/styles/sass/Search.scss
@@ -43,7 +43,7 @@
     }
     
     .btn-wrapper-add {
-      @include book-btn(#00AE68, #fff);
+      @include book-btn(#6581A6, #fff);
     }
     
     .btn-wrapper-move {
