--- a/src/styles/sass/SearchBar.scss
+++ b/src/styles/sass/SearchBar.scss
@@ -78,8 +78,7 @@
         padding: 2px 16px;
         &:hover,
         &.selected {
-          color: #fff;
-          background-color: #4d90fe;
+          background-color: #F2F2F2;
         }
       }
     }
