--- a/src/styles/sass/vars.scss
+++ b/src/styles/sass/vars.scss
@@ -1,5 +1,7 @@
 
-$color-grain: #d7cec7;
-$color-tan: #C09F80;
-$color-blackboard: #565656;
-$color-oxblood: #76323F;
+$hazy-blue: #6581A6;
+$grey-blue: rgba(153, 170, 191, 0.8);
+$light-grey: #F2F2F2;
+$misty-blue: #C5D6E9;
+$hazy-sky: #E5F0FA;
+$ivory: ivory;
