--- a/src/styles/sass/_mixins.scss
+++ b/src/styles/sass/_mixins.scss
@@ -3,7 +3,7 @@
 ----------*/
 @mixin book-btn($btn-color, $font-color) {
   display: inline-block;
-  background-color: #00AE68;
+  background-color: #6581A6;
   height: 40px;
   color: white;
   border-radius: 4px;
@@ -55,10 +55,13 @@
     margin: 0;
     padding: 0;
     list-style-type: none;
+    background-color: #fff;    
     li.list-title {
       padding: 18px 20px;
       font-size: 18px;
-      background-color: #a9a8a8;
+      background-color: rgba(104, 151, 202, 0.18);
+      border-bottom: 1px solid #A5A5A5;
+      border-top: 1px solid #A5A5A5;
     }
     li.list-name {
       border-bottom: 1px solid #d4d4d4;
