--- a/src/styles/sass/Main.scss
+++ b/src/styles/sass/Main.scss
@@ -21,6 +21,10 @@
       border: 1px solid #d4d4d4;
       border-radius: 20px;
       cursor: pointer;
+
+      .btn-icon {
+        margin-left: 4px;
+      }
     }
     
   }
