--- a/src/styles/sass/SwitchListBtn.scss
+++ b/src/styles/sass/SwitchListBtn.scss
@@ -1,8 +1,11 @@
 
 .switch-list-btn {
+  position: relative;
+  top: 35px;
   display: inline-block;
   margin: 30px 0 0;
   background-color: #dcdcdc;
+  border: 1px solid #d4d4d4;  
   border-radius: 4px;
   cursor: pointer;
   
