--- a/src/styles/sass/_mixins.scss
+++ b/src/styles/sass/_mixins.scss
@@ -42,7 +42,7 @@
   right: -300px;
   height: 100vh;
   width: 300px;
-  background-color: #eaeaea;
+  background-color: #fff;
   overflow: hidden;
   transition: transform 0.3s ease-in-out;
   cursor: default;
