--- a/src/styles/sass/RemovePopup.scss
+++ b/src/styles/sass/RemovePopup.scss
@@ -4,7 +4,7 @@
   left: 50%;
   transform: translate(-50%);
   width: 152px;
-  padding: 10px;
+  padding: 10px 10px 10px 19px;  
   font-size: 14px;
   color: #f1efef;
   background-color: #414141;
