--- a/src/styles/sass/Search.scss
+++ b/src/styles/sass/Search.scss
@@ -9,6 +9,7 @@
     font-size: 15px;
     a {
       text-decoration: none;
+      color: #3a3a3a;
       &:hover {
         text-decoration: underline;
       }
